# versiontaskmanager

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_celery_task.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/templates/: index.html  task_detail.html
design/: main.pu
taskmanager/: requirements.txt
taskmanager/api/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
taskmanager/api/migrations/: 0001_initial.py  0002_taskresult.py  0002_version_manifest_versionconfig.py  0003_remove_manifest_manifest_file_and_more.py
taskmanager/taskmanager/: celery.py  settings.py  urls.py
