[project]
name = "taskmanager"
version = "0.1.0"
description = "Task Manager Application"
authors = [
    {name = "tolatolatop", email = "tolatolatop@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.1,<6.0.0",
    "djangorestframework>=3.16.0,<4.0.0",
    "django-cors-headers>=4.7.0,<5.0.0",
    "coreapi>=2.3.3,<3.0.0",
    "django-background-tasks>=1.2.8,<2.0.0",
    "celery>=5.3.6,<6.0.0",
    "redis>=5.0.1,<6.0.0"
]
package-mode = false

[tool.poetry]
packages = [
    {include = "taskmanager"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
